tests/paczka1/fuzzy1/96600582.err
Error in line 5: S219 S219 0,6
Error in line 3: 2Xj7S A53 46,4
Error in line 7: S219 A53 16,5
Error in line 23: k32fXv5n A136 24,9
Error in line 24: k32fXv5n A53 49,7
Error in line 29: k32fXv5n A495 1,7
Error in line 37: l7W A53 367,6
